# firecash-pool-merged

./: .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  _typos.toml  clippy.toml  deny.toml  firecash-bridge.yaml  help.txt  pool-redactor.py  rust-toolchain.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  branch-protection.md  labels.md
.github/ISSUE_TEMPLATE/: incident.md  postmortem.md
.github/workflows/: ci.yml  release.yml  security.yml
accountant/: Cargo.toml
accountant/src/: allocation.rs  config.rs  consumer.rs  error.rs  geoip.rs  kaspad_grpc.rs  lib.rs  maturity.rs  metrics.rs  replay.rs  tier.rs  tier_kasplex.rs  vesting.rs  window.rs
accountant/tests/: allocation_engine.rs  allocation_properties.proptest-regressions  allocation_properties.rs  consumer.rs  kasplex_classifier.rs  maturity_tracker.rs  replay_determinism.rs  replay_harness_scale.rs  share_reject.rs  share_stats.rs  window_aggregator.rs
accountant/tests/common/: mod.rs
api/: Cargo.toml
api/src/: config.rs  error.rs  lib.rs  models.rs  money.rs  params.rs  redact.rs  state.rs
api/src/handlers/: health.rs  miner.rs  mod.rs  pool.rs
api/tests/: endpoints.rs  rate_limit.rs  wire_contract.rs
api/tests/snapshots/: wire_contract__active_miners_history_wire.snap  wire_contract__balance_wire.snap  wire_contract__blocks_page_wire.snap  wire_contract__cycles_page_wire.snap  wire_contract__firmware_breakdown_wire.snap  wire_contract__full_rebate_elite.snap  wire_contract__full_rebate_unknown.snap  wire_contract__hashrate_history_wire.snap  wire_contract__leaderboard_wire.snap  wire_contract__miner_payouts_page_wire.snap  wire_contract__miner_profile_wire.snap  wire_contract__pool_active_sessions_wire.snap  wire_contract__pool_geo_wire.snap  wire_contract__pool_rejects_wire.snap  wire_contract__pool_stats_wire.snap  wire_contract__rejects_wire.snap  wire_contract__workers_wire.snap
archives/: README.md  dashboard-audit-2026-06-03.md  handoff-phase6.md
bridge/: Cargo.toml  UPSTREAM.md  rustfmt.toml
bridge/examples/: cpu_stratum_miner.rs  gen_testnet_addr.rs
bridge/fuzz/: .gitignore  Cargo.toml  README.md
bridge/fuzz/fuzz_targets/: stratum_parser.rs
bridge/src/: anti_abuse.rs  app_config.rs  client_handler.rs  default_client.rs  hasher.rs  kaspaapi.rs  lib.rs  main.rs  merged.rs  prom.rs  share_handler.rs  stratum_context.rs  stratum_listener.rs  stratum_server.rs  tests.rs
bridge/tests/: merged_derisk.rs
crates/katpool-config/: Cargo.toml
crates/katpool-config/src/: lib.rs
crates/katpool-db/: Cargo.toml
crates/katpool-db/migrations/: 20260526000000_bootstrap.sql  20260527000000_share_reject.sql  20260527000001_wallet_tier_audit.sql  20260602000000_coinbase_reward_anchor.sql  20260602000001_krc20_transfer_fees.sql  20260603000000_connection_session_country.sql  20260603000001_treasury_snapshot_utxo_count.sql  20260604000000_payout_accepted_daa_score.sql  20260623000000_share_credited_at_index.sql
crates/katpool-db/src/: error.rs  lib.rs  migrate.rs  pool.rs
crates/katpool-db/src/repo/: audit.rs  block.rs  coinbase_reward.rs  connection_session.rs  mod.rs  nacho_rebate.rs  payout.rs  pool_meta.rs  share.rs  share_allocation.rs  share_reject.rs  share_stats.rs  share_window.rs  treasury.rs  wallet.rs  worker.rs
crates/katpool-db/tests/: enum_parity.rs  migration.rs  repo.rs  repo_api_reads.rs  repo_payouts.rs
crates/katpool-domain/: Cargo.toml
crates/katpool-domain/src/: address.rs  correlation_id.rs  difficulty.rs  events.rs  hash.rs  lib.rs  redact.rs  score.rs  worker.rs
crates/katpool-fault-injection/: Cargo.toml
crates/katpool-fault-injection/src/: lib.rs
crates/katpool-idempotency/: Cargo.toml
crates/katpool-idempotency/src/: lib.rs  lock.rs
crates/katpool-idempotency/tests/: lock.rs
crates/katpool-metrics/: Cargo.toml
crates/katpool-metrics/src/: lib.rs
crates/katpool-secrets/: Cargo.toml
crates/katpool-secrets/src/: error.rs  lib.rs  loader.rs  secret.rs
crates/katpool-storagemass/: Cargo.toml
crates/katpool-storagemass/src/: consolidation.rs  evaluator.rs  fee.rs  lib.rs  planner.rs  tx_build.rs  types.rs
crates/katpool-storagemass/tests/: mass_parity.rs  plan_batches.rs  plan_consolidation.rs
crates/katpool-telemetry/: Cargo.toml
crates/katpool-telemetry/src/: lib.rs
docs/: README.md  architecture.md  capacity-plan.md  custody.md  cutover-plan.md  cutover-stratum-compatibility.md  db-schema.md  dev-workflow.md  kips.md  onboarding.md  phase-1-acceptance.md  phase-2-acceptance.md  phase-3-acceptance.md  phase-4-acceptance.md  phase-5-acceptance.md  phase-6-acceptance.md  roadmap.md  threat-model.md
docs/decisions/: 0001-rust-first.md  0002-fork-rusty-kaspa-bridge.md  0003-sops-only-treasury-custody.md  0004-self-host-observability.md  0005-netcup-vps-railway-edge.md  0006-postgres-17-pinned.md  0007-pgbackrest-wal-archiving.md  0008-hot-only-treasury-with-os-isolation.md  0009-automated-weekly-dr-validation.md  0010-multi-tenant-kaspad-on-pool-vps.md  README.md  (+16 more)
katpool/: Cargo.toml
katpool-dashboard-new/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  railway.json
katpool-landing-new/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json  railway.toml
landing/: index.html
payout-kas/: Cargo.toml
payout-kas/src/: audit.rs  client.rs  confirm.rs  cycle.rs  engine.rs  error.rs  execute.rs  lib.rs  plan.rs  signer.rs  window.rs
payout-kas/src/consolidate/: engine.rs  mod.rs
payout-kas/tests/: consolidate.rs  engine.rs  execute.rs  plan_kas_cycle.rs  signer.rs
payout-krc20/: Cargo.toml
payout-krc20/src/: cycle.rs  engine.rs  execute.rs  inscription.rs  lib.rs  plan.rs  quote.rs  rebate.rs  sign.rs
payout-krc20/tests/: cycle.rs  engine.rs  execute.rs  inscription.rs  plan.rs  quote.rs  rebate.rs  sign.rs
scripts/: ci-fast.sh  ci-local.sh  deploy.sh  set-kaspa-version.sh  testnet10-full-pipeline-live.sh  testnet10-smoke.sh  testnet10-tracker-live.sh  verify-release.sh
(+280 files in other folders)
