[package]
name = "payout-krc20"
description = "Native Rust KRC-20 commit/reveal NACHO rebate engine, storage-mass-aware, idempotent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

# Deps not yet wired by the current milestone stay reserved here so the
# workspace dep surface and lockfile move in lockstep; cargo-machete
# ignores them until the milestone that consumes them lands.
[package.metadata.cargo-machete]
ignored = [
    "chrono",
    "hex",
    "katpool-telemetry",
    "secrecy",
]

[dependencies]
katpool-domain = { path = "../crates/katpool-domain" }
katpool-db = { path = "../crates/katpool-db" }
katpool-storagemass = { path = "../crates/katpool-storagemass" }
katpool-idempotency = { path = "../crates/katpool-idempotency" }
katpool-secrets = { path = "../crates/katpool-secrets" }
katpool-metrics = { path = "../crates/katpool-metrics" }
katpool-telemetry = { path = "../crates/katpool-telemetry" }
payout-kas = { path = "../payout-kas" }
kaspa-consensus-core = { workspace = true }
kaspa-addresses = { workspace = true }
kaspa-txscript = { workspace = true }
secp256k1 = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bigdecimal = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
proptest = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
