[package]
name = "katpool-domain"
description = "Core domain types: WalletAddress, Sompi, NachoUnits, ShareId, BlockTemplate, IdempotencyKey"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
