[package]
name = "katpool-fault-injection"
description = "Test-only chaos primitives: latency injection, packet drops, RPC error simulation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

# Scaffold crate — deps reserved for Phase 9 chaos primitives.
[package.metadata.cargo-machete]
ignored = ["rand", "tokio", "tracing"]

[dependencies]
tokio = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
