[package]
name = "katpool-storagemass"
description = "KIP-9 and KIP-13 storage- and transient-mass calculator. Pure functions; heavily property- and fuzz-tested."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
kaspa-consensus-core = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
